--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>
-        The Great RGB Color Game
+        The Great <span id="colorDisplay">RBG</span> Color Game
     </h1>
     <div id="container">
         <div class="square"></div>
@@ -20,6 +20,6 @@
         <div class="square"></div>
         <div class="square"></div>
     </div>
-    
+<script type="text/javascript" src="index.js"></script>    
 </body>
 </html>
