--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h1>
         The Great <span id="colorDisplay">RBG</span> Color Game
     </h1>
+    <div>
+        <span id="message"></span>
+    </div>
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
