--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>
         The Great <span id="colorDisplay">RBG</span> Color Game
     </h1>
-    <div>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <span id="message"></span>
     </div>
     <div id="container">
