--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 <body>
     <h1>
-        The Great <span id="colorDisplay">RBG</span> Color Game
+        The Great
+        <br> 
+        <span id="colorDisplay">RBG</span>
+        <br>
+        Color Game
     </h1>
     <div id="stripe">
         <button id="reset">New Colors</button>
         <span id="message"></span>
+        <button id="easyBtn">Easy</button>
+        <button id="hardBtn" class="selected">Hard</button>
     </div>
     <div id="container">
         <div class="square"></div>
